--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import "./scss/reset";
-@import "./scss/variables";
 @import "./scss/font";
+@import "./scss/variables";
+@import "./scss/mixin";
 @import "./scss/utilities";
 @import "./scss/base";
 @import "./scss/pages/home";
