--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,6 +12,7 @@ $fs-body-sm: 13px;
 
 // color
 $color-white: #fff;
+$color-light: #FAFAFA;
 $color-gray: #E3E3E3;
 $color-black: #000;
 $color-purple: #4527A0;
