--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -269,12 +269,8 @@
       }
 
       time {
-        display: inline-block;
+        @include green-tag;
         margin-bottom: 10px;
-        padding: 5px 10px;
-        color: $color-light;
-        background-color: $color-green;
-        border-radius: 8px 0 8px 0;
       }
 
       &-text {
@@ -285,5 +281,58 @@
 
   &_insideList {
     padding-left: 15px;
+  }
+}
+
+// policy
+.policy {
+  padding: 30px 0 50px;
+  background-color: $color-purple;
+
+  &-title {
+    margin: 0 auto;
+  }
+
+  &-list {
+    padding-top: 30px;
+
+    &-card {
+      min-height: 379px;
+      padding: 15px;
+      background-color: $color-light;
+      border-radius: 8px;
+      transition: all 0.3s;
+
+      &:hover {
+        cursor: pointer;
+        box-shadow: 0 0 0 3px $color-green;
+    
+        h3 {
+          color: $color-purple;
+        }
+      }
+
+      h3 {
+        @include text-heading4-bold;
+        padding: 10px 0;
+      }
+
+      p {
+        @include text-bodyMedium-regular;
+      }
+
+      ol {
+        padding-left: 24px;
+        list-style-type: decimal;
+      }
+
+      &-2 {
+        margin-top: 30px;
+      }
+
+      &-tag {
+        @include green-tag;
+      }
+    }
   }
 }
