--- a/src/scss/_font.scss
+++ b/src/scss/_font.scss
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Noto+Sans+TC:wght@100;200;300;400;500;600;700;800;900&display=swap');
