--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,8 @@ $fs-body-sm: 13px;
 $color-white: #fff;
 $color-light: #FAFAFA;
 $color-gray: #E3E3E3;
+$color-gray-light: #C1C1C1;
+$color-gray-deep: #B9B9B9;
 $color-black: #000;
 $color-purple: #4527A0;
 $color-green: #26A69A;
