--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -68,7 +68,7 @@
         @include purple-btn;
         @include text-heading5-bold;
         margin-left: 50px;
-        padding: 8px 20px !important;
+        padding: 8px 17px !important;
         border-radius: 30px;
       }
     }
@@ -401,6 +401,82 @@
       img {
         display: inline-block;
       }
+    }
+  }
+}
+
+// email
+.email {
+  padding: 30px 0;
+
+  &-content {
+    display: flex;
+
+    &-title {
+      margin: 0 auto 20px;
+    }
+
+    &-text {
+      width: 679px;
+      margin-left: 12px;
+
+      p {
+        @include text-heading4-bold;
+        max-width: 479px;
+        text-align: center;
+        margin: 10px auto 0;
+      }
+    }
+
+    &-form {
+      margin: 0 auto;
+      text-align: center;
+      padding: 20px 30px;
+
+      &-input {
+        @include input-style;
+        line-height: 30px;
+      }
+
+      textarea{
+        @include input-style;
+        min-height: 100px;
+      }
+
+      &-btn{
+        @include purple-btn;
+      }
+    }
+  }
+}
+
+// footer
+.footer{
+  padding: 15px 0;
+  background-color: $color-purple;
+
+  &-content{
+    position: relative;
+  }
+
+  &-cat{
+    position: absolute;
+    top: -196px;
+    left: 7%;
+  }
+
+  &-logo {
+    display: block;
+    background-image: url(../../images/logo-dark.svg);
+    width: 235px;
+    height: 59px;
+    text-indent: 101%;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: all 0.3s;
+
+    &:hover {
+      opacity: 0.8;
     }
   }
 }
