--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,6 +16,7 @@ $color-light: #FAFAFA;
 $color-gray: #E3E3E3;
 $color-gray-light: #C1C1C1;
 $color-gray-deep: #B9B9B9;
+$color-gray-moreDeep: #A9A9A9;
 $color-gray-dark: #999;
 $color-black: #000;
 $color-purple: #4527A0;
