--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -362,44 +362,184 @@
   background-position: center;
 
   &-card {
-    display: inline-block;
     width: 679px;
-    padding: 30px;
-    border-radius: 80px;
-    background-color: $color-light;
-    text-align: center;
+    height: 437px;
+    perspective: 3000px;
 
-    &-title {
-      margin: 0 auto;
-      padding: 7px 0;
+    &-inner {
+      width: 100%;
+      height: 100%;
+      transition: transform 0.5s;
+      transform-style: preserve-3d;
     }
 
-    &-text {
-      @include text-heading4-bold;
-      padding: 20px 0;
+    &.flipped .donation-card-inner {
+      transform: rotateY(180deg);
     }
 
-    &-total {
-      margin: 0 auto;
-      padding: 11px 0;
+    &-front,
+    &-back {
+      @include donation-card;
+    }
 
-      &Num {
-        font-size: 60px;
-        line-height: 1.2;
-        font-weight: 900;
-        color: $color-purple;
+    &-front {
+      &-title {
+        margin: 0 auto;
+        padding: 7px 0;
+      }
+
+      &-text {
+        @include text-heading4-bold;
+        padding: 20px 0;
+      }
+
+      &-total {
+        margin: 0 auto;
+        padding: 11px 0;
+
+        &Num {
+          font-size: 60px;
+          line-height: 1.2;
+          font-weight: 900;
+          color: $color-purple;
+        }
+      }
+
+      &-goToDanate {
+        @include purple-btn;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin: 20px auto 0;
+
+        img {
+          display: inline-block;
+        }
       }
     }
 
-    &-goToDanate {
-      @include purple-btn;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin: 20px auto 0;
+    &-back {
+      transform: rotateY(180deg);
 
-      img {
-        display: inline-block;
+      &-container {
+        max-width: 551px;
+        margin: 0 auto;
+      }
+
+      &-title {
+        @include text-heading4-bold;
+        margin-bottom: 10px;
+      }
+
+      &-list {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      &-item {
+        input {
+          display: none;
+
+          &[type="radio"]:checked+label {
+            padding: 12px 17px;
+            border: 3px solid $color-purple;
+          }
+        }
+
+        label {
+          display: block;
+          width: 177px;
+          padding: 13px 18px;
+          border: 2px solid $color-gray-moreDeep;
+          border-radius: 8px;
+          text-align: center;
+          background-color: $color-white;
+
+          &:hover {
+            cursor: pointer;
+            border: 3px solid $color-gray-moreDeep;
+            padding: 12px 17px;
+          }
+        }
+
+        h4 {
+          @include text-heading5-bold;
+        }
+
+        img {
+          padding: 5px 0;
+          margin: 5px auto;
+        }
+
+        p {
+          @include text-bodySmail-regular;
+          color: $color-gray-dark;
+        }
+      }
+
+      &-input {
+        margin: 20px 0;
+
+        label {
+          @include text-heading5-bold;
+          display: flex;
+          align-items: center;
+          padding: 18px 28px;
+          border: 2px solid $color-gray-moreDeep;
+          border-radius: 8px;
+          text-align: center;
+          background-color: $color-white;
+
+          p {
+            margin-right: 10px;
+          }
+
+          input {
+            @include input-style;
+            line-height: 30px;
+            margin-bottom: 0;
+          }
+
+          &:hover {
+            cursor: pointer;
+            border: 3px solid $color-gray-moreDeep;
+            padding: 17px 27px;
+          }
+        }
+
+        input[type="radio"] {
+          display: none;
+
+          &:checked+label {
+            padding: 17px 27px;
+            border: 3px solid $color-purple;
+          }
+        }
+      }
+
+      &-btn {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+      }
+
+      &-goBack {
+        @include white-btn;
+        padding: 17px 57px;
+        display: flex;
+        align-items: center;
+      }
+
+      &-goToDanate {
+        @include purple-btn;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        // margin: 20px auto 0;
+
+        img {
+          display: inline-block;
+        }
       }
     }
   }
