--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,6 +1,6 @@
-// ::-webkit-scrollbar {
-//   width: 6px;
-// }
+::-webkit-scrollbar {
+  width: 0;
+}
 // ::-webkit-scrollbar-button {
 //   background-color: #555;
 //   height: 0;
