--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -7,14 +7,14 @@
   height: 100%;
   border: 5px solid $color-purple;
   border-bottom: 0;
-  z-index: 99999;
+  z-index: 999;
   pointer-events: none;
 }
 
 // header
 .header {
   position: fixed;
-  z-index: 9999;
+  z-index: 99;
   width: 100%;
   top: 0;
   left: 0;
@@ -462,7 +462,7 @@
           }
         }
 
-        h4 {
+        h5 {
           @include text-heading5-bold;
         }
 
@@ -525,9 +525,6 @@
 
       &-goBack {
         @include white-btn;
-        padding: 17px 57px;
-        display: flex;
-        align-items: center;
       }
 
       &-goToDanate {
@@ -586,6 +583,41 @@
       &-btn {
         @include purple-btn;
       }
+    }
+  }
+
+  &-modal {
+    .modal-dialog {
+      max-width: none;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      width: 600px;
+      height: 400px;
+      border-radius: 80px;
+      padding: 30px 38px;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+    }
+
+    h4 {
+      @include text-heading4-bold;
+      margin-bottom: 10px;
+    }
+
+    p {
+      @include text-heading6-bold;
+      margin-bottom: 50px;
+    }
+
+    button {
+      @include white-btn;
     }
   }
 }
