--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -434,6 +434,7 @@
       &-list {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
       }
 
       &-item {
@@ -479,6 +480,7 @@
 
       &-input {
         margin: 20px 0;
+        width: 100%;
 
         label {
           @include text-heading5-bold;
@@ -540,6 +542,56 @@
       }
     }
   }
+
+  &-modal {
+    .modal-dialog {
+      max-width: none;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      width: 600px;
+      height: 400px;
+      border-radius: 80px;
+      padding: 30px 38px;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &-text{
+      padding: 7.5px 0;
+    }
+
+    &-money{
+      &-img{
+        height: 40px;
+        padding: 5px 0;
+      }
+
+      &-text{
+        text-align: center;
+        font-size: 30px;
+        line-height: 40px;
+        font-weight: 900;
+        color: $color-purple;
+      }
+    }
+
+    h4 {
+      @include text-heading4-bold;
+      margin-bottom: 10px;
+    }
+
+    button {
+      @include white-btn;
+      margin-top: 50px;
+    }
+  }
 }
 
 // email
@@ -573,11 +625,19 @@
       &-input {
         @include input-style;
         line-height: 30px;
+
+        &.error {
+          border: 1px solid $color-red;
+        }
       }
 
-      textarea {
+      &-textarea {
         @include input-style;
         min-height: 100px;
+
+        &.error {
+          border: 1px solid $color-red;
+        }
       }
 
       &-btn {
