--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -22,9 +22,15 @@
   padding: 18px 0;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.15);
 
+  @media (max-width: 992px) {
+    padding: 14px 0;
+  }
+
   &-logo {
     display: block;
     background-image: url(../../images/logo.svg);
+    background-position: center;
+    background-size: cover;
     width: 235px;
     height: 59px;
     text-indent: 101%;
@@ -35,19 +41,39 @@
     &:hover {
       opacity: 0.8;
     }
+
+    @media (max-width: 992px) {
+      width: 150px;
+      height: 38px;
+    }
+  }
+
+  &-toggle {
+    display: none;
+    background-color: $color-white;
+    border: none;
+
+    &:focus {
+      outline: none;
+    }
+
+    @media (max-width: 992px) {
+      display: block;
+    }
   }
 
   &-nav {
+    gap: 50px;
+
+    @media (max-width: 1200px) {
+      gap: 32px;
+    }
+
     &-item {
       @include text-heading5-bold;
       position: relative;
       color: $color-black;
-      margin-left: 50px;
       padding: 11px 0 !important;
-
-      &:hover {
-        color: $color-black;
-      }
 
       &::after {
         content: "";
@@ -67,10 +93,85 @@
       &-purple {
         @include purple-btn;
         @include text-heading5-bold;
-        margin-left: 50px;
         padding: 8px 17px !important;
         border-radius: 30px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        img {
+          width: 30px;
+          height: 30px;
+        }
       }
+    }
+  }
+
+  &-mobile {
+    &-nav {
+      @include text-heading5-bold;
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      width: 100vw;
+      height: 100vh;
+      top: 0;
+      left: 0;
+      background-color: rgba($color: $color-purple, $alpha: 0.95);
+      text-align: right;
+
+      &Top {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 13.5px 8px;
+      }
+
+      &.show {
+        display: block;
+      }
+
+      &-item {
+        position: relative;
+        display: block;
+        padding: 15px 8px;
+        color: $color-white;
+        transition: all 0.3s;
+
+        &:hover {
+          color: $color-purple;
+          background-color: $color-white;
+          transition: all 0.3s;
+        }
+
+        &-white {
+          @include white-btn;
+          display: inline-block;
+        }
+      }
+    }
+
+    &-logo {
+      display: block;
+      background-image: url(../../images/logo-dark.svg);
+      background-position: center;
+      background-size: cover;
+      width: 150px;
+      height: 38px;
+      text-indent: 101%;
+      overflow: hidden;
+      white-space: nowrap;
+      transition: all 0.3s;
+
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+
+    &-close {
+      background-color: transparent;
+      border: none;
+      padding: 0;
     }
   }
 }
@@ -88,6 +189,11 @@
     position: absolute;
     z-index: 9;
     top: 116px;
+
+    @media (max-width: 1200px) {
+      top: 72px;
+      width: 60%;
+    }
   }
 
   &-titles-2 {
@@ -106,6 +212,15 @@
     &-3 {
       position: absolute;
       top: 491px;
+
+      @media (max-width: 1200px) {
+        top: 77%;
+        height: 90%;
+      }
+
+      @media (max-width: 992px) {
+        top: 80%;
+      }
     }
 
     &-4 {
@@ -113,12 +228,26 @@
       padding: 13.5px 5px;
       bottom: 17px;
       left: 53px;
+
+      @media (max-width: 1200px) {
+        height: 25%;
+        bottom: 3px;
+        left: 5%;
+      }
+
+      @media (max-width: 992px) {
+        height: 23%;
+      }
     }
 
     &-5 {
       position: absolute;
       top: 0;
       right: 0;
+
+      @media (max-width: 1200px) {
+        height: 60%;
+      }
     }
   }
 
@@ -128,9 +257,19 @@
     margin-left: auto;
     margin-right: 75px;
     margin-bottom: -1px; // svg 邊緣沒切好
+
+    @media (max-width: 1200px) {
+      height: 500px;
+      margin-right: 30px;
+    }
+
+    @media (max-width: 992px) {
+      height: 400px;
+    }
   }
 
   &-claim {
+    width: 90%;
     max-width: 1080px;
     margin-left: auto;
     padding: 40px 50px 50px;
@@ -143,10 +282,26 @@
       @include text-heading1-bold;
       text-align: center;
       margin-bottom: 33px;
+
+      @media (max-width: 1200px) {
+        @include text-heading2-bold;
+      }
+
+      @media (max-width: 992px) {
+        @include text-heading3-bold;
+      }
     }
 
     p {
       @include text-heading4-bold;
+
+      @media (max-width: 1200px) {
+        @include text-heading5-bold;
+      }
+
+      @media (max-width: 992px) {
+        @include text-heading6-bold;
+      }
     }
   }
 }
@@ -162,6 +317,10 @@
   &-list {
     display: flex;
     padding-top: 30px;
+
+    @media (max-width: 992px) {
+      display: none;
+    }
 
     &-card {
       border-radius: 8px;
@@ -211,6 +370,10 @@
       position: relative;
       margin-right: 3px;
 
+      @media (max-width: 1200px) {
+        margin-right: 0;
+      }
+
       .activity-list-card-img {
         width: 100%;
         height: 325px;
@@ -255,6 +418,11 @@
         min-width: 276px;
         height: 232px;
         border-radius: 8px 0 0 8px;
+
+        @media (max-width: 1400px) {
+          min-width: 232px;
+          height: auto;
+        }
       }
 
       time {
@@ -365,6 +533,10 @@
     width: 679px;
     height: 437px;
     perspective: 3000px;
+
+    @media (max-width: 992px) {
+      width: 100%;
+    }
 
     &-inner {
       width: 100%;
@@ -563,17 +735,17 @@
       align-items: center;
     }
 
-    &-text{
+    &-text {
       padding: 7.5px 0;
     }
 
-    &-money{
-      &-img{
+    &-money {
+      &-img {
         height: 40px;
         padding: 5px 0;
       }
 
-      &-text{
+      &-text {
         text-align: center;
         font-size: 30px;
         line-height: 40px;
