--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -1,5 +1,10 @@
-@media (min-width: 1400px){
-  .container{
+.container {
+  @media (min-width: 1400px) {
     max-width: 1224px;
-  }  
+  }
+
+  @media (max-width: 992px) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
