--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -706,7 +706,7 @@
         @include text-heading4-bold;
         padding: 10px 0;
 
-        @media (max-width: 576px) {
+        @media (max-width: 767px) {
           @include text-heading5-bold;
         }
       }
@@ -714,7 +714,7 @@
       p {
         @include text-bodyMedium-regular;
 
-        @media (max-width: 576px) {
+        @media (max-width: 767px) {
           @include text-bodyNormal-regular;
         }
       }
@@ -740,7 +740,7 @@
       &-2 {
         margin-top: 30px;
 
-        @media (max-width: 1200px) {
+        @media (max-width: 992px) {
           margin-top: 0;
         }
       }
@@ -781,6 +781,15 @@
 
     @media (max-width: 992px) {
       width: 100%;
+      height: 446.5px;
+    }
+
+    @media (max-width: 767px) {
+      height: 398px;
+    }
+
+    @media (max-width: 576px) {
+      height: 427px;
     }
 
     &-inner {
@@ -800,25 +809,59 @@
     }
 
     &-front {
+      @media (max-width: 992px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+
       &-title {
         margin: 0 auto;
         padding: 7px 0;
+
+        @media (max-width: 992px) {
+          height: 56px;
+          padding: 10px 0;
+        }
+      }
+
+      &-br {
+        display: none;
+
+        @media (max-width: 767px) {
+          display: block;
+        }
       }
 
       &-text {
         @include text-heading4-bold;
-        padding: 20px 0;
+        margin: 20px 0;
+
+        @media (max-width: 767px) {
+          @include text-heading6-bold;
+          margin: 10px 0;
+        }
       }
 
       &-total {
         margin: 0 auto;
         padding: 11px 0;
 
+        @media (max-width: 767px) {
+          height: 40px;
+          padding: 7.5px 0;
+        }
+
         &Num {
           font-size: 60px;
           line-height: 1.2;
           font-weight: 900;
           color: $color-purple;
+
+          @media (max-width: 767px) {
+            font-size: 25px;
+            line-height: 40px;
+          }
         }
       }
 
@@ -832,11 +875,30 @@
         img {
           display: inline-block;
         }
+
+        @media (max-width: 767px) {
+          padding: 12px 27px;
+          margin-top: 10px;
+        }
       }
     }
 
     &-back {
       transform: rotateY(180deg);
+
+      @media (max-width: 992px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+
+      @media (max-width: 767px) {
+        padding-top: 20px;
+      }
+
+      @media (max-width: 576px) {
+        padding: 20px;
+      }
 
       &-container {
         max-width: 551px;
@@ -846,21 +908,43 @@
       &-title {
         @include text-heading4-bold;
         margin-bottom: 10px;
+
+        @media (max-width: 767px) {
+          @include text-heading5-bold;
+        }
       }
 
       &-list {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
+        gap: 20px 10px;
+
+        @media (max-width: 992px) {
+          gap: 10px;
+          margin-bottom: 10px;
+        }
       }
 
       &-item {
+        @media (max-width: 992px) {
+          width: calc(50% - 5px);
+        }
+
+        @media (max-width: 576px) {
+          min-height: 114px;
+        }
+
         input {
           display: none;
 
           &[type="radio"]:checked+label {
             padding: 12px 17px;
             border: 3px solid $color-purple;
+
+            @media (max-width: 576px){
+              padding: 12px 7px;
+            }
           }
         }
 
@@ -877,14 +961,32 @@
             cursor: pointer;
             border: 3px solid $color-gray-moreDeep;
             padding: 12px 17px;
+
+            @media (max-width: 576px){
+              padding: 12px 7px;
+            }
+          }
+
+          @media (max-width: 992px) {
+            width: 100%;
+          }
+
+          @media (max-width: 576px) {
+            height: 100%;
+            padding: 13px 8px;
           }
         }
 
         h5 {
           @include text-heading5-bold;
+
+          @media (max-width: 767px) {
+            @include text-heading6-bold;
+          }
         }
 
         img {
+          height: 30px;
           padding: 5px 0;
           margin: 5px auto;
         }
@@ -896,8 +998,17 @@
       }
 
       &-input {
-        margin: 20px 0;
+        margin: 0 0 20px;
         width: 100%;
+
+        @media (max-width: 992px) {
+          width: calc(50% - 5px);
+          margin-bottom: 0;
+        }
+
+        @media (max-width: 576px) {
+          min-height: 114px;
+        }
 
         label {
           @include text-heading5-bold;
@@ -909,20 +1020,55 @@
           text-align: center;
           background-color: $color-white;
 
+          @media (max-width: 992px) {
+            display: block;
+            padding: 13px 18px;
+          }
+
+          @media (max-width: 576px) {
+            height: 100%;
+            padding: 13px 8px;
+          }
+
           p {
             margin-right: 10px;
+
+            @media (max-width: 992px) {
+              margin-right: 0;
+              margin-bottom: 4.5px;
+            }
+
+            @media (max-width: 767px) {
+              @include text-heading6-bold;
+            }
           }
 
           input {
             @include input-style;
             line-height: 30px;
             margin-bottom: 0;
+
+            @media (max-width: 992px) {
+              margin-bottom: 5px;
+            }
+
+            @media (max-width: 576px) {
+              margin-bottom: 0;
+            }
           }
 
           &:hover {
             cursor: pointer;
             border: 3px solid $color-gray-moreDeep;
             padding: 17px 27px;
+
+            @media (max-width: 992px) {
+              padding: 12px 17px;
+            }
+
+            @media (max-width: 576px){
+              padding: 12px 7px;
+            }
           }
         }
 
@@ -932,6 +1078,14 @@
           &:checked+label {
             padding: 17px 27px;
             border: 3px solid $color-purple;
+
+            @media (max-width: 992px) {
+              padding: 12px 17px;
+            }
+
+            @media (max-width: 576px){
+              padding: 12px 7px;
+            }
           }
         }
       }
@@ -940,6 +1094,10 @@
         display: flex;
         justify-content: center;
         gap: 20px;
+
+        @media (max-width: 767px) {
+          gap: 10px;
+        }
       }
 
       &-goBack {
@@ -951,7 +1109,6 @@
         display: flex;
         align-items: center;
         gap: 10px;
-        // margin: 20px auto 0;
 
         img {
           display: inline-block;
@@ -965,19 +1122,27 @@
       max-width: none;
       width: 100%;
       height: 100%;
+      margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
     .modal-content {
-      width: 600px;
+      max-width: 600px;
+      width: 100%;
       height: 400px;
       border-radius: 80px;
       padding: 30px 38px;
+      margin: 0 20px;
       text-align: center;
       justify-content: center;
       align-items: center;
+
+      @media (max-width: 767px) {
+        height: 300px;
+        padding: 30px;
+      }
     }
 
     &-text {
@@ -1002,6 +1167,10 @@
     h4 {
       @include text-heading4-bold;
       margin-bottom: 10px;
+
+      @media (max-width: 767px) {
+        @include text-heading5-bold;
+      }
     }
 
     button {
